--- a/src/index.css
+++ b/src/index.css
@@ -345,3 +345,65 @@ ul{
 nav h1{
     font-size: 2rem;
 }
+
+.comments-div{
+    background-color:#e1ddb9;
+    margin-top: 20px;
+    padding: 10px 15%;
+    border-radius: 12px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+}
+.comments-div form textarea{
+width: 100%;
+padding: 5px;
+border-radius: 3px;
+border: none;
+}
+.comments-div form button{
+    padding: 3px 5px;
+    border: none;
+    border-radius: 3px;
+    background-color: #f28212;
+}
+.comments-div .hor-line{
+
+    height: 1px;
+    width: 100%;
+    margin: 10px;
+    border-radius: 0px;
+    background-color: rgba(0, 0, 0, 0.153);
+}
+.comments-div .like-btn{
+    padding: 3px;
+    border: none;
+    border-radius: 4px;
+    background-color: white;
+}
+.comments-div .like-btn:hover{
+background-color: black;
+color: white;
+}
+.comments-div .comment{
+    border-radius: 2px;
+    padding: 4px;
+    margin: 2PX ;
+    background-color: rgba(162, 53, 53, 0);
+}
+.comment .hor-line{
+    width: 70%;
+}
+.ingridients {
+    display: block;
+    padding: 3px;
+}
+.ingridients input{
+    margin: 4px;
+}
+.ingridients button{
+    border-radius: 15px;
+    width: auto;
+    padding: 7px;
+    margin-left: 5px;
+}
